Bug 122273 - CRASH while closing LibreOffice with the help not-installed dialog open
Summary: CRASH while closing LibreOffice with the help not-installed dialog open
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0.2 target:6.3.0 target:6.1.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-12-21 18:02 UTC by Xisco Faulí
Modified: 2019-01-11 12:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["Dialog::Execute()"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-12-21 18:02:24 UTC
Steps to reproduce:
1. Open the extension manager ( or the XML filter settings )
2. Click on Help without help installed -> Dialog is prompted
3. Close LibreOffice
4. Click on Cancel
-> Crash

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 7d63c700c36afd27850346e42b92768f084f5d4d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2018-12-21 18:04:06 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=71df42a8d5ec20646045ffb419b89b19fbdf4c02

author	Caolán McNamara <caolanm@redhat.com>	2018-04-18 09:52:02 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-04-18 12:33:14 +0200
commit 71df42a8d5ec20646045ffb419b89b19fbdf4c02 (patch)
tree 98ca0bc0b6632907e7428cc741a45de3580e3963
parent f08511e913de2f3a5096d3181f8d70dc6b3d2eb3 (diff)
Related: tdf#117068 inform salframe that there's a modal dialog running

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara
Comment 2 Julien Nabet 2018-12-22 12:12:19 UTC
On pc Debian x86-64 with master sources updated today, I got a hang with gdb:
Ctrl-C gives:

#3  0x00007fffe8861b5c in DialogRunner::run() (this=0x55555c321ed0) at /home/julien/lo/libreoffice/vcl/unx/gtk3/gtk3gtkinst.cxx:2440
#4  0x00007fffe8862508 in GtkInstanceDialog::run() (this=0x55555c321e70) at /home/julien/lo/libreoffice/vcl/unx/gtk3/gtk3gtkinst.cxx:2549
#5  0x00007ffff550cd89 in SfxHelp::Start_Impl(rtl::OUString const&, vcl::Window const*, rtl::OUString const&)
    (rURL="desktop/ui/extensionmanager/updatebtn", pWindow=0x55555b061fa0, rKeyword="") at /home/julien/lo/libreoffice/sfx2/source/appl/sfxhelp.cxx:1127
#6  0x00007ffff550a311 in SfxHelp::Start(rtl::OUString const&, vcl::Window const*) (this=0x5555578c0ba0, rURL="desktop/ui/extensionmanager/updatebtn", pWindow=0x55555b4d95e0)
    at /home/julien/lo/libreoffice/sfx2/source/appl/sfxhelp.cxx:677

Without gdb, difficult to tell if it's a crash or not, it just stops.
Comment 3 Caolán McNamara 2018-12-23 17:49:11 UTC
well, these are a pain
Comment 4 Commit Notification 2019-01-08 13:25:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/242119f8cdf0743afd96a5c467c81adace9a8c40%5E%21

tdf#122273 modal dialog on modeless dialog needs special handling

It will be available in 6.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2019-01-09 10:51:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/096b455583aa23d554cd05b1fac8909b7e10e355%5E%21

tdf#122273 modal dialog on modeless dialog needs special handling

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-01-09 13:24:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/07d34ce7ace8060bbef18a4d98be73970430da61%5E%21

tdf#122273 modal dialog on modeless dialog needs special handling

It will be available in 6.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-01-11 12:00:16 UTC
I do confirm the problem is solved in

Version: 6.3.0.0.alpha0+
Build ID: c164dbaff63d67f5e89d133c272412aaf4c5c158
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

however, I encountered bug 122651 on gtk/gen caused by the commit fixing this issue

@Caolán, thanks for fixing this!!