tdf#122273 modal dialog on modeless dialog needs special handling

Change-Id: Idb5111b3f795f55c4b5644b5bcc6145106ff1392